# EnigmaticRTS

./: .gitignore  AGENTS.md  Cargo.toml  screenshot_test.ps1
.kilo/: Rules.md
.kilo/plans/: 1782703038625-enigmatic-rts-world-plan.md  1782755385739-planet-solar-sim-plan.md  master-roadmap.md
crates/er_core/: Cargo.toml
crates/er_core/src/: config.rs  lib.rs  math.rs  rng.rs  seed.rs
crates/er_game/: Cargo.toml  build.rs
crates/er_game/assets/shaders/: atmosphere.wgsl  clouds.wgsl  starfield.wgsl  sun.wgsl
crates/er_game/src/: baseline_manifest.rs  bench.rs  camera.rs  chunk_cap_controller.rs  cli.rs  crash.rs  debug_overlay.rs  diagnostics.rs  frame_timing.rs  gpu_telemetry.rs  learned_stress.rs  lib.rs  m5_surface_test.rs  main.rs  menu.rs  projection.rs  screenshot_test.rs  settings.rs  space.rs  telemetry.rs  terrain_diffusion.rs  terrain_diffusion_stress.rs
crates/er_render/: Cargo.toml
crates/er_render/src/: lib.rs
crates/er_terrain/: Cargo.toml
crates/er_terrain/assets/shaders/: ocean_fragment.wgsl  ocean_uniform.wgsl  ocean_vertex.wgsl  spherify.wgsl  terrain_fragment.wgsl  terrain_uniform.wgsl  terrain_vertex.wgsl
crates/er_terrain/benches/: chunk_gen_bench.rs  mesh_pipeline_bench.rs
crates/er_terrain/src/: chunk.rs  culling.rs  debug.rs  lib.rs  lod.rs  material.rs  mesh_gen.rs  ocean.rs  profiler.rs  quadtree.rs  systems.rs
crates/er_terrain/tests/: seam.rs
crates/er_world/: Cargo.toml
crates/er_world/assets/: biomes.ron
crates/er_world/assets/shaders/: biome.wgsl  elevation.wgsl
crates/er_world/benches/: elevation_bench.rs
crates/er_world/src/: biome.rs  brushes.rs  cache.rs  elevation.rs  lib.rs  params.rs  streaming.rs  surface_cache.rs  surface_charts.rs  surface_tiles.rs  terrain_field.rs  terrain_space.rs  water.rs
crates/er_world/tests/: biome_parity.rs  landform_profile.rs  m4_chart_stress.rs  m5_cpu_stress.rs  m5_streaming_integration.rs  parity.rs  shader_parity.rs  surface_chart_seams.rs
hardware_profiles/: README.md  desktop_reference.toml  rtx3060_optimus.toml
screenshots_retained/: README.md
tools/: compare_goldens.ps1  run_screenshot_evidence.ps1
tools/terrain_diffusion/: README_MILESTONE3.md  locked_manifest.py  protocol.py  setup_venv.ps1  start_server.ps1
tools/terrain_diffusion/bench/: compare_dtypes.py  run_benchmarks.py  run_stress.py
tools/terrain_diffusion/tests/: test_deterministic.py
tools/terrain_diffusion/tests/fixtures/: generate_fixtures.py
