[package]
name = "er_game"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true, features = [
    "3d_bevy_render",
    "ui_bevy_render",
    "default_app",
    "scene",
    "std",
    "bevy_winit",
    "default_font",
    "multi_threaded",
] }
