[package]
name = "er_game"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true, features = [
    "3d_bevy_render",
    "ui_bevy_render",
    "default_app",
    "scene",
    "picking",
    "std",
    "bevy_winit",
    "default_font",
    "multi_threaded",
] }
er_core = { workspace = true }
er_world = { workspace = true }
er_terrain = { path = "../er_terrain" }
