[package]
name = "er_game"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
terrain_diffusion = []

[dependencies]
bevy = { workspace = true, features = [
    "3d_bevy_render",
    "ui_bevy_render",
    "default_app",
    "scene",
    "picking",
    "std",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "default_font",
    "multi_threaded",
    "sysinfo_plugin",
] }
er_core = { workspace = true }
er_world = { workspace = true }
er_terrain = { path = "../er_terrain" }
encase = "0.12"
