[package]
name = "er_terrain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
er_core = { workspace = true }
er_world = { workspace = true }
glam = { workspace = true }
bevy = { workspace = true, features = [
    "3d_bevy_render",
    "default_app",
    "std",
    "multi_threaded",
] }
bytemuck = { workspace = true }
encase = "0.12"
