[package]
name = "er_world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
er_core = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
fastnoise-lite = { workspace = true, features = ["f64", "std"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }

[dev-dependencies]
criterion = "0.5"
wgpu = "29"
pollster = "0.3"

[[bench]]
name = "elevation_bench"
harness = false
